[gd_scene load_steps=9 format=3 uid="uid://b87bsgflffktp"]

[ext_resource type="Script" path="res://scripts/testWIP/tooltip.gd" id="1_3bam4"]
[ext_resource type="Texture2D" uid="uid://dhwjfoq67ya1u" path="res://assets/wip/6x scaling/tooltipBorder.png" id="2_t1ewy"]
[ext_resource type="FontFile" uid="uid://k41whgh8gjtf" path="res://assets/fonts/PrintChar21.ttf" id="3_f8q2l"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fqw4b"]
size = Vector2(2, 2)

[sub_resource type="Animation" id="Animation_jobcc"]
resource_name = "hover"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TooltipBorder:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_66t64"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TooltipBorder:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_wyd51"]
resource_name = "gone"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TooltipBorder:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gy651"]
_data = {
"RESET": SubResource("Animation_66t64"),
"gone": SubResource("Animation_wyd51"),
"hover": SubResource("Animation_jobcc")
}

[node name="tooltip" type="Node2D"]
texture_filter = 1
script = ExtResource("1_3bam4")

[node name="TooltipBorder" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
texture = ExtResource("2_t1ewy")
centered = false

[node name="text" type="Label" parent="TooltipBorder"]
offset_left = 12.0
offset_top = 14.0
offset_right = 204.0
offset_bottom = 62.0
theme_override_constants/line_spacing = 6
theme_override_fonts/font = ExtResource("3_f8q2l")
theme_override_font_sizes/font_size = 16
text = "Reduced food consumption"
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[node name="tooltipDetect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="tooltipDetect"]
shape = SubResource("RectangleShape2D_fqw4b")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gy651")
}

[connection signal="area_entered" from="tooltipDetect" to="." method="areaEntered"]
[connection signal="area_exited" from="tooltipDetect" to="." method="areaExited"]
